--- a/WpfCalculator/WpfCalculator/MainWindow.xaml
+++ b/WpfCalculator/WpfCalculator/MainWindow.xaml
@@ -6,9 +6,113 @@
         xmlns:local="clr-namespace:WpfCalculator"
         mc:Ignorable="d"
         Title="MainWindow"
-        Height="450"
-        Width="800">
-  <Grid>
+        Height="525"
+        Width="350">
+  <Grid Margin="10">
+    <Grid.ColumnDefinitions>
+      <ColumnDefinition Width="*" />
+      <ColumnDefinition Width="*" />
+      <ColumnDefinition Width="*" />
+      <ColumnDefinition Width="*" />
+    </Grid.ColumnDefinitions>
+    <Grid.RowDefinitions>
+      <RowDefinition Height="2*" />
+      <RowDefinition Height="*" />
+      <RowDefinition Height="*" />
+      <RowDefinition Height="*" />
+      <RowDefinition Height="*" />
+      <RowDefinition Height="*" />
+    </Grid.RowDefinitions>
+    <Label Content="0"
+           HorizontalAlignment="Right"
+           VerticalAlignment="Bottom"
+           FontSize="60"
+           Grid.ColumnSpan="4" />
 
+    <!--Row 1 (Results)-->
+    <Button Content="AC"
+            Margin="5"
+            Grid.Column="0"
+            Grid.Row="1" />
+    <Button Content="+/-"
+            Margin="5"
+            Grid.Column="1"
+            Grid.Row="1" />
+    <Button Content="%"
+            Margin="5"
+            Grid.Column="2"
+            Grid.Row="1" />
+    <Button Content="/"
+            Margin="5"
+            Grid.Column="3"
+            Grid.Row="1" />
+
+    <!--Row 2-->
+    <Button Content="7"
+            Margin="5"
+            Grid.Column="0"
+            Grid.Row="2" />
+    <Button Content="8"
+            Margin="5"
+            Grid.Column="1"
+            Grid.Row="2" />
+    <Button Content="9"
+            Margin="5"
+            Grid.Column="2"
+            Grid.Row="2" />
+    <Button Content="*"
+            Margin="5"
+            Grid.Column="3"
+            Grid.Row="2" />
+
+    <!--Row 3-->
+    <Button Content="4"
+            Margin="5"
+            Grid.Column="0"
+            Grid.Row="3" />
+    <Button Content="5"
+            Margin="5"
+            Grid.Column="1"
+            Grid.Row="3" />
+    <Button Content="6"
+            Margin="5"
+            Grid.Column="2"
+            Grid.Row="3" />
+    <Button Content="-"
+            Margin="5"
+            Grid.Column="3"
+            Grid.Row="3" />
+
+    <!--Row 4-->
+    <Button Content="1"
+            Margin="5"
+            Grid.Column="0"
+            Grid.Row="4" />
+    <Button Content="2"
+            Margin="5"
+            Grid.Column="1"
+            Grid.Row="4" />
+    <Button Content="3"
+            Margin="5"
+            Grid.Column="2"
+            Grid.Row="4" />
+    <Button Content="+"
+            Margin="5"
+            Grid.Column="3"
+            Grid.Row="4" />
+
+    <!--Row 5-->
+    <Button Content="0"
+            Margin="5"
+            Grid.ColumnSpan="2"
+            Grid.Row="5" />
+    <Button Content="."
+            Margin="5"
+            Grid.Column="2"
+            Grid.Row="5" />
+    <Button Content="="
+            Margin="5"
+            Grid.Column="3"
+            Grid.Row="5" />
   </Grid>
 </Window>
