Started working on some of the calculator's event handlers

--- a/WpfCalculator/WpfCalculator/MainWindow.xaml
+++ b/WpfCalculator/WpfCalculator/MainWindow.xaml
@@ -36,7 +36,7 @@
                 Margin="5"
                 Grid.Column="0"
                 Grid.Row="1" />
-        <Button x:Name="buttonPlusMinus"
+        <Button x:Name="buttonNegative"
                 Content="+/-"
                 Margin="5"
                 Grid.Column="1"
