Started working on the math when the Equals button is clicked. > Created SelectedOperator enum to track the operations > Created SimpleMath class to handle the math

--- a/WpfCalculator/WpfCalculator/MainWindow.xaml
+++ b/WpfCalculator/WpfCalculator/MainWindow.xaml
@@ -139,6 +139,7 @@
                 Grid.ColumnSpan="2"
                 Grid.Row="5" />
         <Button x:Name="buttonPeriod"
+                Click="ButtonPeriod_Click"
                 Content="."
                 Margin="5"
                 Grid.Column="2"
