--- a/WpfCalculator/WpfCalculator/MainWindow.xaml
+++ b/WpfCalculator/WpfCalculator/MainWindow.xaml
@@ -48,6 +48,8 @@
                 Grid.Row="1" />
         <Button x:Name="buttonDivide"
                 Click="OperationButton_Click"
+                Background="Orange"
+                Foreground="White"
                 Content="/"
                 Margin="5"
                 Grid.Column="3"
@@ -56,24 +58,32 @@
         <!--Row 2-->
         <Button x:Name="button7"
                 Click="NumberButton_Click"
+                Background="#444444"
+                Foreground="White"
                 Content="7"
                 Margin="5"
                 Grid.Column="0"
                 Grid.Row="2" />
         <Button x:Name="button8"
                 Click="NumberButton_Click"
+                Background="#444444"
+                Foreground="White"
                 Content="8"
                 Margin="5"
                 Grid.Column="1"
                 Grid.Row="2" />
         <Button x:Name="button9"
                 Click="NumberButton_Click"
+                Background="#444444"
+                Foreground="White"
                 Content="9"
                 Margin="5"
                 Grid.Column="2"
                 Grid.Row="2" />
         <Button x:Name="buttonMultiply"
                 Click="OperationButton_Click"
+                Background="Orange"
+                Foreground="White"
                 Content="*"
                 Margin="5"
                 Grid.Column="3"
@@ -82,24 +92,32 @@
         <!--Row 3-->
         <Button x:Name="button4"
                 Click="NumberButton_Click"
+                Background="#444444"
+                Foreground="White"
                 Content="4"
                 Margin="5"
                 Grid.Column="0"
                 Grid.Row="3" />
         <Button x:Name="button5"
                 Click="NumberButton_Click"
+                Background="#444444"
+                Foreground="White"
                 Content="5"
                 Margin="5"
                 Grid.Column="1"
                 Grid.Row="3" />
         <Button x:Name="button6"
                 Click="NumberButton_Click"
+                Background="#444444"
+                Foreground="White"
                 Content="6"
                 Margin="5"
                 Grid.Column="2"
                 Grid.Row="3" />
         <Button x:Name="buttonMinus"
                 Click="OperationButton_Click"
+                Background="Orange"
+                Foreground="White"
                 Content="-"
                 Margin="5"
                 Grid.Column="3"
@@ -108,24 +126,32 @@
         <!--Row 4-->
         <Button x:Name="button1"
                 Click="NumberButton_Click"
+                Background="#444444"
+                Foreground="White"
                 Content="1"
                 Margin="5"
                 Grid.Column="0"
                 Grid.Row="4" />
         <Button x:Name="button2"
                 Click="NumberButton_Click"
+                Background="#444444"
+                Foreground="White"
                 Content="2"
                 Margin="5"
                 Grid.Column="1"
                 Grid.Row="4" />
         <Button x:Name="button3"
                 Click="NumberButton_Click"
+                Background="#444444"
+                Foreground="White"
                 Content="3"
                 Margin="5"
                 Grid.Column="2"
                 Grid.Row="4" />
         <Button x:Name="buttonPlus"
                 Click="OperationButton_Click"
+                Background="Orange"
+                Foreground="White"
                 Content="+"
                 Margin="5"
                 Grid.Column="3"
@@ -134,17 +160,23 @@
         <!--Row 5-->
         <Button x:Name="button0"
                 Click="NumberButton_Click"
+                Background="#444444"
+                Foreground="White"
                 Content="0"
                 Margin="5"
                 Grid.ColumnSpan="2"
                 Grid.Row="5" />
         <Button x:Name="buttonPeriod"
                 Click="ButtonPeriod_Click"
+                Background="#444444"
+                Foreground="White"
                 Content="."
                 Margin="5"
                 Grid.Column="2"
                 Grid.Row="5" />
         <Button x:Name="buttonEquals"
+                Background="Orange"
+                Foreground="White"
                 Content="="
                 Margin="5"
                 Grid.Column="3"
