--- a/WpfCalculator/WpfCalculator/MainWindow.xaml
+++ b/WpfCalculator/WpfCalculator/MainWindow.xaml
@@ -8,6 +8,19 @@
         Title="MainWindow"
         Height="525"
         Width="350">
+
+    <!--Local Static Resources-->
+    <Window.Resources>
+        <SolidColorBrush x:Key="numbersColor"
+                         Color="#444444" />
+        <SolidColorBrush x:Key="operatorsColor"
+                         Color="Orange" />
+        <SolidColorBrush x:Key="numbersFontColor"
+                         Color="White" />
+        <SolidColorBrush x:Key="numbersOperatorsColor"
+                         Color="White" />
+    </Window.Resources>
+
     <Grid Margin="10">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
@@ -48,8 +61,8 @@
                 Grid.Row="1" />
         <Button x:Name="buttonDivide"
                 Click="OperationButton_Click"
-                Background="Orange"
-                Foreground="White"
+                Background="{StaticResource operatorsColor}"
+                Foreground="{StaticResource numbersOperatorsColor}"
                 Content="/"
                 Margin="5"
                 Grid.Column="3"
@@ -58,32 +71,32 @@
         <!--Row 2-->
         <Button x:Name="button7"
                 Click="NumberButton_Click"
-                Background="#444444"
-                Foreground="White"
+                Background="{StaticResource numbersColor}"
+                Foreground="{StaticResource numbersFontColor}"
                 Content="7"
                 Margin="5"
                 Grid.Column="0"
                 Grid.Row="2" />
         <Button x:Name="button8"
                 Click="NumberButton_Click"
-                Background="#444444"
-                Foreground="White"
+                Background="{StaticResource numbersColor}"
+                Foreground="{StaticResource numbersFontColor}"
                 Content="8"
                 Margin="5"
                 Grid.Column="1"
                 Grid.Row="2" />
         <Button x:Name="button9"
                 Click="NumberButton_Click"
-                Background="#444444"
-                Foreground="White"
+                Background="{StaticResource numbersColor}"
+                Foreground="{StaticResource numbersFontColor}"
                 Content="9"
                 Margin="5"
                 Grid.Column="2"
                 Grid.Row="2" />
         <Button x:Name="buttonMultiply"
                 Click="OperationButton_Click"
-                Background="Orange"
-                Foreground="White"
+                Background="{StaticResource operatorsColor}"
+                Foreground="{StaticResource numbersOperatorsColor}"
                 Content="*"
                 Margin="5"
                 Grid.Column="3"
@@ -92,32 +105,32 @@
         <!--Row 3-->
         <Button x:Name="button4"
                 Click="NumberButton_Click"
-                Background="#444444"
-                Foreground="White"
+                Background="{StaticResource numbersColor}"
+                Foreground="{StaticResource numbersFontColor}"
                 Content="4"
                 Margin="5"
                 Grid.Column="0"
                 Grid.Row="3" />
         <Button x:Name="button5"
                 Click="NumberButton_Click"
-                Background="#444444"
-                Foreground="White"
+                Background="{StaticResource numbersColor}"
+                Foreground="{StaticResource numbersFontColor}"
                 Content="5"
                 Margin="5"
                 Grid.Column="1"
                 Grid.Row="3" />
         <Button x:Name="button6"
                 Click="NumberButton_Click"
-                Background="#444444"
-                Foreground="White"
+                Background="{StaticResource numbersColor}"
+                Foreground="{StaticResource numbersFontColor}"
                 Content="6"
                 Margin="5"
                 Grid.Column="2"
                 Grid.Row="3" />
         <Button x:Name="buttonMinus"
                 Click="OperationButton_Click"
-                Background="Orange"
-                Foreground="White"
+                Background="{StaticResource operatorsColor}"
+                Foreground="{StaticResource numbersOperatorsColor}"
                 Content="-"
                 Margin="5"
                 Grid.Column="3"
@@ -126,32 +139,32 @@
         <!--Row 4-->
         <Button x:Name="button1"
                 Click="NumberButton_Click"
-                Background="#444444"
-                Foreground="White"
+                Background="{StaticResource numbersColor}"
+                Foreground="{StaticResource numbersFontColor}"
                 Content="1"
                 Margin="5"
                 Grid.Column="0"
                 Grid.Row="4" />
         <Button x:Name="button2"
                 Click="NumberButton_Click"
-                Background="#444444"
-                Foreground="White"
+                Background="{StaticResource numbersColor}"
+                Foreground="{StaticResource numbersFontColor}"
                 Content="2"
                 Margin="5"
                 Grid.Column="1"
                 Grid.Row="4" />
         <Button x:Name="button3"
                 Click="NumberButton_Click"
-                Background="#444444"
-                Foreground="White"
+                Background="{StaticResource numbersColor}"
+                Foreground="{StaticResource numbersFontColor}"
                 Content="3"
                 Margin="5"
                 Grid.Column="2"
                 Grid.Row="4" />
         <Button x:Name="buttonPlus"
                 Click="OperationButton_Click"
-                Background="Orange"
-                Foreground="White"
+                Background="{StaticResource operatorsColor}"
+                Foreground="{StaticResource numbersOperatorsColor}"
                 Content="+"
                 Margin="5"
                 Grid.Column="3"
@@ -160,23 +173,23 @@
         <!--Row 5-->
         <Button x:Name="button0"
                 Click="NumberButton_Click"
-                Background="#444444"
-                Foreground="White"
+                Background="{StaticResource numbersColor}"
+                Foreground="{StaticResource numbersFontColor}"
                 Content="0"
                 Margin="5"
                 Grid.ColumnSpan="2"
                 Grid.Row="5" />
         <Button x:Name="buttonPeriod"
                 Click="ButtonPeriod_Click"
-                Background="#444444"
-                Foreground="White"
+                Background="{StaticResource numbersColor}"
+                Foreground="{StaticResource numbersFontColor}"
                 Content="."
                 Margin="5"
                 Grid.Column="2"
                 Grid.Row="5" />
         <Button x:Name="buttonEquals"
-                Background="Orange"
-                Foreground="White"
+                Background="{StaticResource operatorsColor}"
+                Foreground="{StaticResource numbersOperatorsColor}"
                 Content="="
                 Margin="5"
                 Grid.Column="3"
