Experimented with Implicit Styles
Did some testing with implicit styles on buttons and labels #4

--- a/WpfCalculator/WpfCalculator/App.xaml
+++ b/WpfCalculator/WpfCalculator/App.xaml
@@ -4,6 +4,24 @@
              xmlns:local="clr-namespace:WpfCalculator"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <SolidColorBrush x:Key="numbersColor"
+                         Color="#444444" />
+        <SolidColorBrush x:Key="operatorsColor"
+                         Color="Orange" />
+        <SolidColorBrush x:Key="numbersFontColor"
+                         Color="White" />
+        <SolidColorBrush x:Key="numbersOperatorsColor"
+                         Color="White" />
+
+        <Style TargetType="Button">
+            <Setter Property="Foreground"
+                    Value="White"/>
+            <Setter Property="FontSize"
+                    Value="25"/>
+        </Style>
+        <Style TargetType="Label">
+            <Setter Property="FontSize" 
+                    Value="70"/>
+        </Style>
     </Application.Resources>
 </Application>
