--- a/WpfCalculator/WpfCalculator/App.xaml
+++ b/WpfCalculator/WpfCalculator/App.xaml
@@ -13,15 +13,16 @@
         <SolidColorBrush x:Key="numbersOperatorsColor"
                          Color="White" />
 
+        <!--Implicit Style Testing -->
         <Style TargetType="Button">
             <Setter Property="Foreground"
-                    Value="White"/>
+                    Value="White" />
             <Setter Property="FontSize"
-                    Value="25"/>
+                    Value="25" />
         </Style>
         <Style TargetType="Label">
-            <Setter Property="FontSize" 
-                    Value="70"/>
+            <Setter Property="FontSize"
+                    Value="70" />
         </Style>
     </Application.Resources>
 </Application>
