--- a/WpfCalculator/WpfCalculator/App.xaml
+++ b/WpfCalculator/WpfCalculator/App.xaml
@@ -4,25 +4,65 @@
              xmlns:local="clr-namespace:WpfCalculator"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-        <SolidColorBrush x:Key="numbersColor"
+        <!--Static Resources-->
+        <SolidColorBrush x:Key="numbersBackgroundColor"
                          Color="#444444" />
-        <SolidColorBrush x:Key="operatorsColor"
+        <SolidColorBrush x:Key="operatorsBackgroundColor"
                          Color="Orange" />
-        <SolidColorBrush x:Key="numbersFontColor"
+        <SolidColorBrush x:Key="functionBackgroundColor"
+                         Color="DarkGray" />
+        <SolidColorBrush x:Key="numbersForegroundColor"
                          Color="White" />
-        <SolidColorBrush x:Key="numbersOperatorsColor"
+        <SolidColorBrush x:Key="operatorsForegroundColor"
                          Color="White" />
+        <SolidColorBrush x:Key="functionForegroundColor"
+                         Color="Black" />
 
-        <!--Implicit Style Testing -->
-        <Style TargetType="Button">
-            <Setter Property="Foreground"
-                    Value="White" />
-            <Setter Property="FontSize"
-                    Value="25" />
-        </Style>
-        <Style TargetType="Label">
+        <!--Implicit Styles -->
+        <!--Result Label Style-->
+        <Style TargetType="Label"
+               x:Key="resultLabelStyle">
             <Setter Property="FontSize"
                     Value="70" />
+        </Style>
+
+        <!--General Button Style-->
+        <Style TargetType="Button"
+               x:Key="generalButtonsStyle">
+            <Setter Property="FontSize"
+                    Value="25" />
+            <Setter Property="Margin"
+                    Value="5" />
+        </Style>
+
+        <!--Number Button Style-->
+        <Style TargetType="Button"
+               x:Key="numberButtonsStyle"
+               BasedOn="{StaticResource generalButtonsStyle}">
+            <Setter Property="Background"
+                    Value="{StaticResource numbersBackgroundColor}" />
+            <Setter Property="Foreground"
+                    Value="{StaticResource numbersForegroundColor}" />
+        </Style>
+
+        <!--Operator Button Style-->
+        <Style TargetType="Button"
+               x:Key="operatorButtonsStyle"
+               BasedOn="{StaticResource generalButtonsStyle}">
+            <Setter Property="Background"
+                    Value="{StaticResource operatorsBackgroundColor}" />
+            <Setter Property="Foreground"
+                    Value="{StaticResource operatorsForegroundColor}" />
+        </Style>
+
+        <!--Function Button Style-->
+        <Style TargetType="Button"
+               x:Key="functionButtonsStyle"
+               BasedOn="{StaticResource generalButtonsStyle}">
+            <Setter Property="Background"
+                    Value="{StaticResource functionBackgroundColor}" />
+            <Setter Property="Foreground"
+                    Value="{StaticResource functionForegroundColor}" />
         </Style>
     </Application.Resources>
 </Application>
