--- a/WpfCalculator/WpfCalculator/MainWindow.xaml
+++ b/WpfCalculator/WpfCalculator/MainWindow.xaml
@@ -25,6 +25,7 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <Label x:Name="labelResults"
+               Style="{StaticResource resultLabelStyle}"
                Content="0"
                HorizontalAlignment="Right"
                VerticalAlignment="Bottom"
@@ -32,137 +33,120 @@
 
         <!--Row 1 (Results)-->
         <Button x:Name="buttonAC"
+                Style="{StaticResource functionButtonsStyle}"
                 Content="AC"
-                Margin="5"
                 Grid.Column="0"
                 Grid.Row="1" />
         <Button x:Name="buttonNegative"
+                Style="{StaticResource functionButtonsStyle}"
                 Content="+/-"
-                Margin="5"
                 Grid.Column="1"
                 Grid.Row="1" />
         <Button x:Name="buttonPercent"
+                Style="{StaticResource functionButtonsStyle}"
                 Content="%"
-                Margin="5"
                 Grid.Column="2"
                 Grid.Row="1" />
         <Button x:Name="buttonDivide"
                 Click="OperationButton_Click"
-                Background="{StaticResource operatorsColor}"
+                Style="{StaticResource operatorButtonsStyle}"
                 Content="/"
-                Margin="5"
                 Grid.Column="3"
                 Grid.Row="1" />
-
         <!--Row 2-->
         <Button x:Name="button7"
                 Click="NumberButton_Click"
-                Background="{StaticResource numbersColor}"
+                Style="{StaticResource numberButtonsStyle}"
                 Content="7"
-                Margin="5"
                 Grid.Column="0"
                 Grid.Row="2" />
         <Button x:Name="button8"
                 Click="NumberButton_Click"
-                Background="{StaticResource numbersColor}"
+                Style="{StaticResource numberButtonsStyle}"
                 Content="8"
-                Margin="5"
                 Grid.Column="1"
                 Grid.Row="2" />
         <Button x:Name="button9"
                 Click="NumberButton_Click"
-                Background="{StaticResource numbersColor}"
+                Style="{StaticResource numberButtonsStyle}"
                 Content="9"
-                Margin="5"
                 Grid.Column="2"
                 Grid.Row="2" />
         <Button x:Name="buttonMultiply"
                 Click="OperationButton_Click"
-                Background="{StaticResource operatorsColor}"
+                Style="{StaticResource operatorButtonsStyle}"
                 Content="*"
-                Margin="5"
                 Grid.Column="3"
                 Grid.Row="2" />
 
         <!--Row 3-->
         <Button x:Name="button4"
                 Click="NumberButton_Click"
-                Background="{StaticResource numbersColor}"
+                Style="{StaticResource numberButtonsStyle}"
                 Content="4"
-                Margin="5"
                 Grid.Column="0"
                 Grid.Row="3" />
         <Button x:Name="button5"
                 Click="NumberButton_Click"
-                Background="{StaticResource numbersColor}"
+                Style="{StaticResource numberButtonsStyle}"
                 Content="5"
-                Margin="5"
                 Grid.Column="1"
                 Grid.Row="3" />
         <Button x:Name="button6"
                 Click="NumberButton_Click"
-                Background="{StaticResource numbersColor}"
+                Style="{StaticResource numberButtonsStyle}"
                 Content="6"
-                Margin="5"
                 Grid.Column="2"
                 Grid.Row="3" />
         <Button x:Name="buttonMinus"
                 Click="OperationButton_Click"
-                Background="{StaticResource operatorsColor}"
+                Style="{StaticResource operatorButtonsStyle}"
                 Content="-"
-                Margin="5"
                 Grid.Column="3"
                 Grid.Row="3" />
 
         <!--Row 4-->
         <Button x:Name="button1"
                 Click="NumberButton_Click"
-                Background="{StaticResource numbersColor}"
+                Style="{StaticResource numberButtonsStyle}"
                 Content="1"
-                Margin="5"
                 Grid.Column="0"
                 Grid.Row="4" />
         <Button x:Name="button2"
                 Click="NumberButton_Click"
-                Background="{StaticResource numbersColor}"
+                Style="{StaticResource numberButtonsStyle}"
                 Content="2"
-                Margin="5"
                 Grid.Column="1"
                 Grid.Row="4" />
         <Button x:Name="button3"
                 Click="NumberButton_Click"
-                Background="{StaticResource numbersColor}"
+                Style="{StaticResource numberButtonsStyle}"
                 Content="3"
-                Margin="5"
                 Grid.Column="2"
                 Grid.Row="4" />
         <Button x:Name="buttonPlus"
                 Click="OperationButton_Click"
-                Background="{StaticResource operatorsColor}"
+                Style="{StaticResource operatorButtonsStyle}"
                 Content="+"
-                Margin="5"
                 Grid.Column="3"
                 Grid.Row="4" />
 
         <!--Row 5-->
         <Button x:Name="button0"
                 Click="NumberButton_Click"
-                Background="{StaticResource numbersColor}"
+                Style="{StaticResource numberButtonsStyle}"
                 Content="0"
-                Margin="5"
                 Grid.ColumnSpan="2"
                 Grid.Row="5" />
         <Button x:Name="buttonPeriod"
                 Click="ButtonPeriod_Click"
-                Background="{StaticResource numbersColor}"
+                Style="{StaticResource numberButtonsStyle}"
                 Content="."
-                Margin="5"
                 Grid.Column="2"
                 Grid.Row="5" />
         <Button x:Name="buttonEquals"
-                Background="{StaticResource operatorsColor}"
+                Style="{StaticResource operatorButtonsStyle}"
                 Content="="
-                Margin="5"
                 Grid.Column="3"
                 Grid.Row="5" />
     </Grid>
