Tested with using DynamicResources that can be changed at runtime
Changed StaticResources to DynamicResources on MainWindow.xaml. Then created resources for the Font and Margin sizes that can be adjusted at runtime.

--- a/WpfCalculator/WpfCalculator/MainWindow.xaml
+++ b/WpfCalculator/WpfCalculator/MainWindow.xaml
@@ -25,7 +25,7 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <Label x:Name="labelResults"
-               Style="{StaticResource resultLabelStyle}"
+               Style="{DynamicResource resultLabelStyle}"
                Content="0"
                HorizontalAlignment="Right"
                VerticalAlignment="Bottom"
@@ -33,48 +33,48 @@
 
         <!--Row 1 (Results)-->
         <Button x:Name="buttonAC"
-                Style="{StaticResource functionButtonsStyle}"
+                Style="{DynamicResource functionButtonsStyle}"
                 Content="AC"
                 Grid.Column="0"
                 Grid.Row="1" />
         <Button x:Name="buttonNegative"
-                Style="{StaticResource functionButtonsStyle}"
+                Style="{DynamicResource functionButtonsStyle}"
                 Content="+/-"
                 Grid.Column="1"
                 Grid.Row="1" />
         <Button x:Name="buttonPercent"
-                Style="{StaticResource functionButtonsStyle}"
+                Style="{DynamicResource functionButtonsStyle}"
                 Content="%"
                 Grid.Column="2"
                 Grid.Row="1" />
         <Button x:Name="buttonDivide"
                 Click="OperationButton_Click"
-                Style="{StaticResource operatorButtonsStyle}"
+                Style="{DynamicResource operatorButtonsStyle}"
                 Content="/"
                 Grid.Column="3"
                 Grid.Row="1" />
         <!--Row 2-->
         <Button x:Name="button7"
                 Click="NumberButton_Click"
-                Style="{StaticResource numberButtonsStyle}"
+                Style="{DynamicResource numberButtonsStyle}"
                 Content="7"
                 Grid.Column="0"
                 Grid.Row="2" />
         <Button x:Name="button8"
                 Click="NumberButton_Click"
-                Style="{StaticResource numberButtonsStyle}"
+                Style="{DynamicResource numberButtonsStyle}"
                 Content="8"
                 Grid.Column="1"
                 Grid.Row="2" />
         <Button x:Name="button9"
                 Click="NumberButton_Click"
-                Style="{StaticResource numberButtonsStyle}"
+                Style="{DynamicResource numberButtonsStyle}"
                 Content="9"
                 Grid.Column="2"
                 Grid.Row="2" />
         <Button x:Name="buttonMultiply"
                 Click="OperationButton_Click"
-                Style="{StaticResource operatorButtonsStyle}"
+                Style="{DynamicResource operatorButtonsStyle}"
                 Content="*"
                 Grid.Column="3"
                 Grid.Row="2" />
@@ -82,25 +82,25 @@
         <!--Row 3-->
         <Button x:Name="button4"
                 Click="NumberButton_Click"
-                Style="{StaticResource numberButtonsStyle}"
+                Style="{DynamicResource numberButtonsStyle}"
                 Content="4"
                 Grid.Column="0"
                 Grid.Row="3" />
         <Button x:Name="button5"
                 Click="NumberButton_Click"
-                Style="{StaticResource numberButtonsStyle}"
+                Style="{DynamicResource numberButtonsStyle}"
                 Content="5"
                 Grid.Column="1"
                 Grid.Row="3" />
         <Button x:Name="button6"
                 Click="NumberButton_Click"
-                Style="{StaticResource numberButtonsStyle}"
+                Style="{DynamicResource numberButtonsStyle}"
                 Content="6"
                 Grid.Column="2"
                 Grid.Row="3" />
         <Button x:Name="buttonMinus"
                 Click="OperationButton_Click"
-                Style="{StaticResource operatorButtonsStyle}"
+                Style="{DynamicResource operatorButtonsStyle}"
                 Content="-"
                 Grid.Column="3"
                 Grid.Row="3" />
@@ -108,25 +108,25 @@
         <!--Row 4-->
         <Button x:Name="button1"
                 Click="NumberButton_Click"
-                Style="{StaticResource numberButtonsStyle}"
+                Style="{DynamicResource numberButtonsStyle}"
                 Content="1"
                 Grid.Column="0"
                 Grid.Row="4" />
         <Button x:Name="button2"
                 Click="NumberButton_Click"
-                Style="{StaticResource numberButtonsStyle}"
+                Style="{DynamicResource numberButtonsStyle}"
                 Content="2"
                 Grid.Column="1"
                 Grid.Row="4" />
         <Button x:Name="button3"
                 Click="NumberButton_Click"
-                Style="{StaticResource numberButtonsStyle}"
+                Style="{DynamicResource numberButtonsStyle}"
                 Content="3"
                 Grid.Column="2"
                 Grid.Row="4" />
         <Button x:Name="buttonPlus"
                 Click="OperationButton_Click"
-                Style="{StaticResource operatorButtonsStyle}"
+                Style="{DynamicResource operatorButtonsStyle}"
                 Content="+"
                 Grid.Column="3"
                 Grid.Row="4" />
@@ -134,18 +134,19 @@
         <!--Row 5-->
         <Button x:Name="button0"
                 Click="NumberButton_Click"
-                Style="{StaticResource numberButtonsStyle}"
+                Style="{DynamicResource numberButtonsStyle}"
                 Content="0"
                 Grid.ColumnSpan="2"
                 Grid.Row="5" />
         <Button x:Name="buttonPeriod"
                 Click="ButtonPeriod_Click"
-                Style="{StaticResource numberButtonsStyle}"
+                Style="{DynamicResource numberButtonsStyle}"
                 Content="."
                 Grid.Column="2"
                 Grid.Row="5" />
         <Button x:Name="buttonEquals"
-                Style="{StaticResource operatorButtonsStyle}"
+                Click="ButtonEquals_Click_1"
+                Style="{DynamicResource operatorButtonsStyle}"
                 Content="="
                 Grid.Column="3"
                 Grid.Row="5" />
