--- a/WpfCalculator/WpfCalculator/App.xaml
+++ b/WpfCalculator/WpfCalculator/App.xaml
@@ -2,8 +2,18 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:WpfCalculator"
+             xmlns:System="clr-namespace:System;assembly=mscorlib"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
+        <!-- Resource Values -->
+        <System:Double x:Key="StandardLabelFontSize">70</System:Double>
+        <System:Double x:Key="StandardButtonFontSize">25</System:Double>
+        <Thickness x:Key="StandardButtonMargin" 
+                   Bottom="5"
+                   Left="5"
+                   Right="5"
+                   Top="5"/>
+
         <!--Static Resources-->
         <SolidColorBrush x:Key="numbersBackgroundColor"
                          Color="#444444" />
@@ -23,16 +33,16 @@
         <Style TargetType="Label"
                x:Key="resultLabelStyle">
             <Setter Property="FontSize"
-                    Value="70" />
+                    Value="{DynamicResource StandardLabelFontSize}" />
         </Style>
 
         <!--General Button Style-->
         <Style TargetType="Button"
                x:Key="generalButtonsStyle">
             <Setter Property="FontSize"
-                    Value="25" />
+                    Value="{DynamicResource StandardButtonFontSize}" />
             <Setter Property="Margin"
-                    Value="5" />
+                    Value="{DynamicResource StandardButtonMargin}" />
         </Style>
 
         <!--Number Button Style-->
